--- a/color_fliper/style.css
+++ b/color_fliper/style.css
@@ -1,12 +1,17 @@
-*{
+* {
    padding: 0;
    margin: 0;
    font-family: sans-serif;
    list-style: none;
    text-decoration: none;
 }
+
+body {
+   transition: cubic-bezier(0.07, 0.79, 0.77, 0.53) 0.3s;
+}
+
 /**------------------NAV---------------------*/
-nav{
+nav {
    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.151);
    width: 100%;
    height: 10vh;
@@ -16,39 +21,42 @@ nav{
    align-items: center;
 }
 
-nav h1{
+nav h1 {
    font-size: 40px;
    font-weight: 100;
-   
+
    color: rgb(0, 185, 185);
 }
-nav .nav-center{
+
+nav .nav-center {
    width: 75vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
-   
+
 }
-.nav-center ul{
+
+.nav-center ul {
    font-size: 30px;
    width: 20vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
-   
+
 }
-.nav-center a{
+
+.nav-center a {
    color: rgb(10, 10, 10);
 }
 
-main{
+main {
    height: 90vh;
    display: flex;
    align-items: center;
    justify-content: center;
 }
 
-.container{
+.container {
    background-color: rgb(15, 29, 41);
    width: 500px;
    height: 200px;
@@ -60,12 +68,15 @@ main{
    justify-content: space-evenly;
    flex-direction: column;
 }
-.container .color{
+
+.container .color {
    color: rgb(62, 75, 255);
+   transition: 0.3s;
 }
-.container button{
+
+.container button {
    width: 80px;
-   height: 40px;  
+   height: 40px;
    color: white;
    background-color: black;
    border-color: rgb(189, 200, 233);
@@ -74,27 +85,31 @@ main{
    transition: ease 0.3s;
    cursor: pointer;
 }
-.container button:hover{
+
+.container button:hover {
    color: black;
    background-color: white;
    border-color: black;
-
 }
 
+
 @media (max-width: 768px) {
-   
-   nav h1{
+
+   nav h1 {
       font-size: 30px;
    }
-   .nav-center ul{
+
+   .nav-center ul {
       font-size: 20px;
    }
-   .container{
-      width: 300px;
+
+   .container {
+      width: 400px;
       height: 150px;
       font-size: 15px;
    }
-   .container button{
+
+   .container button {
       width: 60px;
       height: 30px;
       font-size: 20px;
