completed review project

--- a/color_fliper/style.css
+++ b/color_fliper/style.css
@@ -58,7 +58,7 @@ main {
 
 .container {
    background-color: rgb(15, 29, 41);
-   width: 500px;
+   width: 600px;
    height: 200px;
    border-radius: 20px;
    color: rgb(225, 240, 255);
@@ -113,5 +113,6 @@ main {
       width: 60px;
       height: 30px;
       font-size: 20px;
+      color: rgb(100, 180, 100);
    }
 }
